HelloUltraviolet/Fixtures/RejectedSource/Modules/UsingListDuplicate/Expected.uv
//! Expected diagnostic metadata for the UsingListDuplicate rejected-source specimen.

expectedDiagnostic("E-MOD-1206", "Using-List-Dup")
expectedDiagnostic("E-MOD-1206", "Bind-Using-Err")
expectedDiagnostic("E-MOD-1206", "diagnostics.UsingDeclarations")
